<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F0EA"
    android:orientation="horizontal"
    android:padding="@dimen/hy_lay_dp_16">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="@dimen/hy_lay_dp_15">

        <TextView
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fan_reset_title"
            android:textSize="@dimen/hy_font_sp_30"
            android:theme="@style/baseTextTheme" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/hy_lay_dp_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_info"
                    android:theme="@style/baseTextTheme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/reset_info1"
                    android:theme="@style/baseTextTheme1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/reset_info2"
                    android:theme="@style/baseTextTheme1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/reset_info3"
                    android:theme="@style/baseTextTheme1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/reset_info4"
                    android:theme="@style/baseTextTheme1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/reset_info5"
                    android:theme="@style/baseTextTheme1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/reset_info6"
                    android:theme="@style/baseTextTheme1"

                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/hy_lay_dp_15"
        android:layout_weight="5"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/li_back"
                android:layout_width="@dimen/li_return_image"
                android:layout_height="@dimen/li_return_image"
                android:padding="@dimen/hy_lay_dp_15"
                android:gravity="center"
                android:src="@drawable/icon_return"
                android:tint="#000"
                />

            <Button
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/hy_lay_dp_30"
                android:id="@+id/bt_search_address"
                android:layout_width="@dimen/main_bt_width"
                android:layout_height="@dimen/main_bt_height"
                android:layout_gravity="center|end"
                android:background="@drawable/button_style_bg"
                android:text="@string/search_address_button"
                android:theme="@style/baseTextTheme"
                android:textColor="#fff"/>


        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/fan_reset_type1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fanReset_height"
                    android:background="@drawable/main_bottom_bg" />

                <include layout="@layout/fan_reset_type2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fanReset_height"
                    android:layout_marginTop="@dimen/hy_lay_dp_30"
                    android:background="@drawable/main_bottom_bg" />

                <include layout="@layout/fan_reset_type3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fanReset_height"
                    android:layout_marginTop="@dimen/hy_lay_dp_30"
                    android:background="@drawable/main_bottom_bg" />

                <include layout="@layout/fan_reset_type4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fanReset_height"
                    android:layout_marginTop="@dimen/hy_lay_dp_30"
                    android:background="@drawable/main_bottom_bg"/>

                <include layout="@layout/set_dcfan_module"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/hy_lay_dp_350"
                    android:layout_marginTop="@dimen/hy_lay_dp_30"
                    android:background="@drawable/main_bottom_bg"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>